# time-series-in-action-2025

./: .gitignore  README.md  pyproject.toml
homeworks/: Homework_1.ipynb  Homework_2.ipynb  Homework_3.ipynb  Homework_4.ipynb
homeworks/data/: anomaly.csv  train.parquet
lectures/: lecture_2_additional.md
seminars/seminar_1/: Part_2.ipynb
seminars/seminar_1/data/wikipedia/: sample.csv
seminars/seminar_2/: README.md
seminars/seminar_3/: README.md
seminars/seminar_3/data/: data.csv
seminars/seminar_4/: Part_1(Classification).ipynb  Part_2(Forecasting).ipynb
seminars/seminar_5/: README.md
